# marketing-analytics-jumpstart

./: .dockerignore  .flake8  .gcloudignore  .gitignore  .yamllint  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  Pipfile  README.md  _requirements-dev.txt  config.yaml  env.sh.example  mypy.ini  poetry.toml  pyproject.toml  tasks.py  workflow_settings.yaml
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: terraform.yaml
cloudbuild/: cd-pipelines.yaml  cd-sql.yaml  cd.yaml  ci-pipelines.yaml  ci-sql.yaml  ci.yaml  images-builders.yaml  pipelines.yaml  pr-checks.yaml
config/: README.md  config.yaml.tftpl  demo.yaml  demo.yaml.tftpl  dev.yaml  dev.yaml.tftpl  prod.yaml  prod.yaml.tftpl  uat.yaml  uat.yaml.tftpl
container/: Dockerfile.base  Dockerfile.builder  Dockerfile.zetasql
definitions/: first_view.sqlx  second_view.sqlx
docs/: VAIS_prompt_instructions.md  activation.md  config.md  data_store.md  feature_store.md  ml_specs.md  pipelines.md  prediction_result_analysis.md  tasks.md
docs/lookerstudio/: README.md
infrastructure/: README.md
infrastructure/cloudshell/: terraform-template.tfvars  tutorial.md
infrastructure/lookerstudio/: README.md  config.ini  lookerstudio-deployment-walkthrough.md
infrastructure/templates/: backend.tf.tpl
infrastructure/terraform/: .gitignore  .terraform.lock.hcl  POST-INSTALLATION.md  README.md  main.tf  outputs.tf  terraform-sample.tfvars  variables.tf  versions.tf
notebooks/: MAJ_quick_installation.ipynb  events_analysis.ipynb  quick_installation.ipynb
python/: fe.yaml
python/activation/: .dockerignore  .gcloudignore  Dockerfile  main.py  metadata.json  pipeline_test.py  requirements.txt
python/base_component_image/: Dockerfile  build-push.py  pyproject.toml
python/base_component_image/ma_components/: vertex.py
python/ga4_setup/: requirements.txt  setup.py
python/lookerstudio/: README.md  config.ini  lookerstudio_deployment.py  pyproject.toml
python/notebooks/: vertex_ai_auto_audience_segmentation_ga4_interest-direct.ipynb  vertex_ai_auto_audience_segmentation_ga4_interest.ipynb  vertex_ai_auto_audience_segmentation_ga4_interest.md
python/pipelines/: auto_segmentation_pipelines.py  automl_tabular_pl_v1.yaml  automl_tabular_pl_v2.yaml  automl_tabular_pl_v3.yaml  automl_tabular_pl_v4.yaml  automl_tabular_pl_v5.yaml  compiler.py  feature_engineering_pipelines.py  pipeline_ops.py  scheduler.py  segmentation_pipelines.py  tabular_pipelines.py  transformations-churn-propensity.json  transformations-customer-ltv.json  transformations-lead-score-propensity.json  transformations-purchase-propensity-cltv.json  transformations-purchase-propensity.json  transformations-value-based-bidding.json  uploader.py
scripts/: common.sh  create-custom-ga4-dimensions.sh  deployer_roles.txt  generate-tf-backend.sh  quick-install.sh  session-resume.sh  set-env.sh
sql/model/: create_customer_ltv_bqml.sqlx  create_purchase_propensity_bqml.sqlx
sql/procedure/: aggregate_predictions_procedure.sqlx  aggregated_value_based_bidding_explanation_preparation.sqlx  aggregated_value_based_bidding_training_preparation.sqlx  audience_segmentation_inference_preparation.sqlx  audience_segmentation_training_preparation.sqlx  auto_audience_segmentation_inference_preparation.sqlx  auto_audience_segmentation_training_preparation.sqlx  churn_propensity_inference_preparation.sqlx  churn_propensity_label.sqlx  churn_propensity_training_preparation.sqlx  customer_lifetime_value_inference_preparation.sqlx  customer_lifetime_value_label.sqlx  customer_lifetime_value_training_preparation.sqlx  lead_score_propensity_inference_preparation.sqlx  lead_score_propensity_label.sqlx  lead_score_propensity_training_preparation.sqlx  purchase_propensity_inference_preparation.sqlx  purchase_propensity_label.sqlx  purchase_propensity_training_preparation.sqlx  user_behaviour_revenue_insights.sqlx  user_dimensions.sqlx  user_lifetime_dimensions.sqlx  user_lookback_metrics.sqlx  user_predictions_aggregation.sqlx  user_rolling_window_lead_metrics.sqlx  user_rolling_window_lifetime_metrics.sqlx  user_rolling_window_metrics.sqlx  user_scoped_lifetime_metrics.sqlx  user_scoped_metrics.sqlx  user_scoped_segmentation_metrics.sqlx  user_segmentation_dimensions.sqlx  user_session_event_aggregated_metrics.sqlx
sql/query/: audience_segmentation_query_template.sqlx  auto_audience_segmentation_query_template.sqlx  cltv_query_template.sqlx  create_gemini_model.sqlx  invoke_aggregated_value_based_bidding_explanation_preparation.sqlx  invoke_audience_segmentation_training_preparation.sqlx  invoke_auto_audience_segmentation_inference_preparation.sqlx  invoke_auto_audience_segmentation_training_preparation.sqlx  invoke_backfill_churn_propensity_label.sqlx  invoke_backfill_customer_lifetime_value_label.sqlx  invoke_backfill_lead_score_propensity_label.sqlx  invoke_backfill_purchase_propensity_label.sqlx  invoke_backfill_user_behaviour_revenue_insights.sqlx  invoke_backfill_user_dimensions.sqlx  invoke_backfill_user_lifetime_dimensions.sqlx  invoke_backfill_user_lookback_metrics.sqlx  invoke_backfill_user_rolling_window_lead_metrics.sqlx  invoke_backfill_user_rolling_window_lifetime_metrics.sqlx  invoke_backfill_user_rolling_window_metrics.sqlx  invoke_backfill_user_scoped_lifetime_metrics.sqlx  invoke_backfill_user_scoped_metrics.sqlx  invoke_backfill_user_scoped_segmentation_metrics.sqlx  invoke_backfill_user_segmentation_dimensions.sqlx  invoke_backfill_user_session_event_aggregated_metrics.sqlx  invoke_churn_propensity_inference_preparation.sqlx  invoke_churn_propensity_label.sqlx  invoke_churn_propensity_training_preparation.sqlx  invoke_customer_lifetime_value_label.sqlx  (+13 more)
templates/: activation_type_configuration_template.tpl  app_payload_template.jinja2  lead_score_propensity_smart_bidding_view.sql.tpl  load_vbb_activation_configuration.sql.tpl  looker_studio_create_dashboard_url_template.txt  monitoring_resource_link_template.csv  monitoring_resource_link_template.tpl  purchase_propensity_smart_bidding_view.sql.tpl  vbb_activation_configuration.jsonl
(+119 files in other folders)
