[tool.poetry]
name = "ma-components"
version = "0.1"
description = "contains components used in marketing analytics project. the need is to package the components and containerise so that they can be used from the python function based component"
authors = ["Christos Aniftos <aniftos@google.com>"]
readme = "README.md"
packages = [{include = "ma_components"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
#python = ">=3.8,<3.12"
## Fixing this error: https://stackoverflow.com/questions/76175487/sudden-importerror-cannot-import-name-appengine-from-requests-packages-urlli
kfp = {version = "2.0.0-b12", allow-prereleases = true}
#kfp = {version = "2.0.0-b16", allow-prereleases = true}
kfp-server-api = "2.0.0.a6"
#kfp-server-api = "2.0.0b1"
urllib3 = "1.26.15"
toml = "^0.10.2"
docker = "^6.0.1"
google-cloud-bigquery = "2.30.0"
google-cloud-aiplatform = "1.22.0"
google-cloud-pubsub = "2.15.0"
google-cloud-pipeline-components = "1.0.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
