[tool.poetry]
name = "ma-components"
version = "1.0.0"
description = "contains components used in marketing analytics project. the need is to package the components and containerise so that they can be used from the python function based component"
authors = ["Marketing Analytics Solutions Architects <ma-se@google.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "ma_components"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
pip = "23.3.2"
kfp = "2.4.0"
## Fixing this error: https://stackoverflow.com/questions/76175487/sudden-importerror-cannot-import-name-appengine-from-requests-packages-urlli
#kfp = "2.0.0-rc.2"
#kfp = {version = "2.0.0-b12", allow-prereleases = true}
#kfp = {version = "2.0.0-b16", allow-prereleases = true}
kfp-server-api = "2.0.5"
#kfp-server-api = "2.0.0-rc.1"
#kfp-server-api = "2.0.0.a6"
#kfp-server-api = "2.0.0b1"
urllib3 = "1.26.20"
toml = "^0.10.2"
docker = "^6.0.1"
google-cloud-bigquery = "3.21.0"
google-cloud-bigquery-connection = "1.17.0"
#google-cloud-aiplatform = "1.52.0"
google-cloud-aiplatform = "1.77.0"
shapely = "<2.0.0"
google-cloud-pubsub = "2.27.2"
#google-cloud-pipeline-components = "1.0.33"
google-cloud-pipeline-components = "2.6.0"
db-dtypes = "1.3.1"
optuna = "3.6.1"
scikit-learn = "1.6.1"
#plotly = "5.16.0" 
#matplotlib= "3.7.2" 
#seaborn = "0.12.2"
pyarrow = "15.0.2"
google-auth-oauthlib = "^1.2.1"
oauth2client = "^4.1.3"
google-cloud-core = "^2.4.1"
sympy="1.13.3"
google-cloud-resource-manager="1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
