[tool.poetry]
name = "looker studio deployment"
version = "0.1.0"
description = "Deployment process for the Marketing Analytics Jumpstart Looker Studio dashboard."
authors = ["Monty Chavez <montychavez@google.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1"
google-cloud-bigquery = "^3.10.0"
google-auth = "^2.17.3"
google-api-core = "^2.11.0"
configparser = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
